secretspec-derive/tests/ui/invalid_toml_embedded.stderr
error: Failed to read invalid_toml_embedded.txt: No such file or directory (os error 2)
 --> tests/ui/invalid_toml_embedded.rs:4:1
  |
4 | define_secrets!("invalid_toml_embedded.txt");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `define_secrets` (in Nightly builds, run with -Z macro-backtrace for more info)
